[project]
name = "butterknife"
version = "0.1.0"
description = "Suicide Detection Model"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
  "emoji==2.14.1",
  "jupyterlab==4.3.5",
  "koreanize-matplotlib==0.1.1",
  "loguru==0.7.3",
  "matplotlib==3.10.1",
  "pandas==2.2.3",
  "pip==25.0.1", # needs for pytorch gpu version
  "pyarrow==19.0.1",
  "pydantic==2.10.6",
  "pypager==3.0.1",
  "scikit-learn==1.6.1",
  "soynlp",
  "tiktoken==0.9.0",
  "torch==2.6.0",
  "tqdm==4.67.1",
  "transformers==4.49.0",
  "twscrape==0.15.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu" },
]
soynlp = { git = "https://github.com/MisileLab/soynlp" }

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
