[project]
name = "butterknife"
version = "0.1.0"
description = "Suicide Detection Model"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
  "emoji==2.14.1",
  "jupyterlab==4.4.2",
  "koreanize-matplotlib==0.1.1",
  "loguru==0.7.3",
  "matplotlib==3.10.3",
  "pip==25.1.1", # for rocm
  "polars==1.29.0",
  "pyarrow==20.0.0",
  "pydantic==2.11.4",
  "pypager==3.0.1",
  "scikit-learn==1.6.1",
  "soynlp",
  "tiktoken==0.9.0",
  "torch==2.7.0",
  "tqdm==4.67.1",
  "transformers==4.51.3"
]

[tool.basedpyright]
reportUnannotatedClassAttribute = false

[tool.uv]
override-dependencies = ["pydantic==2.10.6"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu" },
]
soynlp = { git = "https://github.com/MisileLab/soynlp" }

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
